Fix "s'inscrire maintenant" menu item
Menu item was too short.

--- a/static/sass/_fun.scss
+++ b/static/sass/_fun.scss
@@ -277,7 +277,7 @@ body header.global {
                 }
 
                 li.nav-global-element {
-                    width: 170px;
+                    width: 180px;
                     text-align: center;
                 }
 
